Fixed header collapsing

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
     display: none;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
     .navbar-header {
         float: none;
     }
